--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tauri-apps/api": "^2.7.0",
     "@tauri-apps/plugin-opener": "^2.4.0",
+    "@types/node": "^24.2.0",
     "@vueuse/core": "^13.5.0",
     "axios": "^1.11.0",
     "pinia": "^3.0.3",
